objects/Integration_Log__c.object
<CustomObject>
    <fields>
        <fullName>Attempt__c</fullName>
        <label>Attempt</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Call_Duration_Seconds__c</fullName>
        <label>Call Duration Seconds</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>End_Point_URL__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>End Point URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exception__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Exception</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Method__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Method</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Time__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Request Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Request__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Request</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Response_Status_Code__c</fullName>
        <label>Response Status Code</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Response_Status__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Response Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Response_Time__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Response Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Response__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Response</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Source_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Source Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Timeout__c</fullName>
        <label>Timeout</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Integration Log</label>
    <nameField>
        <displayFormat>IL-{00000000}</displayFormat>
        <label>Integration Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Integration Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>